<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:id="@+id/login_ll_container_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20sp"
        android:paddingEnd="20sp">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1" /> <!-- Espaciador superior -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signInTitle"
            android:gravity="center"
            android:textColor="@color/abcall_primary_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@mipmap/ic_white_bg_logo_with_text"
            android:contentDescription="@string/abcall_icon"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/abcall_third_one"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                style="@style/customLoginInputTextAppearance" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginTop="16dp"
            app:endIconTint="@color/abcall_third_one"
            android:hint="@string/password"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword|textNoSuggestions"
                style="@style/customLoginInputTextAppearance" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customPrimaryButton"
            app:cornerRadius="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/signIn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customSecondaryButton"
            app:cornerRadius="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/registro" />

    </LinearLayout>

</ScrollView>
